--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Jekyll-Foundation-Starter
 base_url: ""
 ---
-<section class="row support">
+<section class="support">
     <div class="small-12 medium-8 medium-offset-2 large-offset-2 end columns">
 
       <h1><i class="fa fa-rocket"></i> Jekyll-Foundation-Starter</h1>
@@ -11,7 +11,6 @@ base_url: ""
       <p>
         {{ site.site_description }}
       </p>
-
 
   </div>
 </section>
